# gravity-reth

./: .gitignore  Cargo.toml
.cargo/: config.toml
.github/workflows/: lint.yml
crates/blockchain-tree/src/: chain.rs
crates/chain-state/src/: in_memory.rs  memory_overlay.rs
crates/chainspec/src/: spec.rs
crates/consensus/auto-seal/src/: lib.rs
crates/engine/tree/: Cargo.toml
crates/engine/tree/src/tree/: cached_state.rs  mod.rs
crates/ethereum/evm/: Cargo.toml
crates/ethereum/evm/src/: debug_ext.rs  execute.rs  lib.rs  parallel_execute.rs  rise_pevm_adaptor.rs
crates/ethereum/payload/: Cargo.toml
crates/ethereum/payload/src/: lib.rs
crates/evm/: Cargo.toml
crates/evm/src/: database.rs  either.rs  execute.rs  lib.rs  metrics.rs  noop.rs  state.rs  test_utils.rs
crates/evm/src/system_calls/: eip7002.rs  eip7251.rs
crates/exex/exex/src/backfill/: job.rs
crates/gravity-storage/: Cargo.toml
crates/gravity-storage/src/: lib.rs
crates/gravity-storage/src/block_view_storage/: mod.rs
crates/net/network/src/: network.rs  peers.rs
crates/net/network/src/session/: mod.rs
crates/node/builder/: Cargo.toml
crates/node/metrics/src/: recorder.rs
crates/optimism/evm/src/: execute.rs
crates/payload/basic/: Cargo.toml
crates/payload/basic/src/: lib.rs
crates/payload/builder/src/: database.rs
crates/pipe-exec-layer-ext/: Cargo.toml
crates/pipe-exec-layer-ext-v2/: Cargo.toml
crates/pipe-exec-layer-ext-v2/src/: channel.rs  lib.rs  metrics.rs
crates/pipe-exec-layer-ext/src/: lib.rs
crates/primitives-traits/src/: alloy_compat.rs
crates/primitives/src/: alloy_compat.rs  block.rs  lib.rs
crates/revm/src/: cached.rs  test_utils.rs
crates/rpc/rpc-eth-api/src/helpers/: pending_block.rs  trace.rs
crates/rpc/rpc-eth-types/src/cache/: db.rs
crates/rpc/rpc/src/: debug.rs  validation.rs
crates/rpc/rpc/src/eth/: bundle.rs  sim_bundle.rs
crates/stages/api/src/: stage.rs
crates/stages/api/src/pipeline/: mod.rs
crates/stages/stages/src/stages/: execution.rs
crates/storage/provider/: Cargo.toml
crates/storage/provider/src/providers/: blockchain_provider.rs  bundle_state_provider.rs  mod.rs
crates/storage/provider/src/providers/database/: mod.rs  parallel_provider.rs
crates/storage/provider/src/providers/state/: historical.rs  latest.rs  macros.rs
crates/storage/provider/src/test_utils/: mock.rs  noop.rs
crates/storage/storage-api/: Cargo.toml
crates/storage/storage-api/src/: noop.rs  state.rs  trie.rs
crates/tasks/src/: lib.rs
crates/transaction-pool/src/pool/: mod.rs
src/: lib.rs
