[package]
name = "gravity-storage"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "pipeline gravity storage"

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
reth-primitives.workspace = true
revm.workspace = true
reth-payload-builder.workspace = true
reth-storage-api.workspace = true
reth-revm.workspace = true
reth-evm.workspace = true
reth-trie.workspace = true

tracing.workspace = true
tokio.workspace = true
thiserror.workspace = true
