[package]
name = "reth-pipe-exec-layer-ext-v2"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "pipeline execution layer extension"

[lints]
workspace = true

[dependencies]
reth-primitives.workspace = true
reth-rpc-types.workspace = true
reth-evm-ethereum.workspace = true
reth-chainspec.workspace = true
reth-revm.workspace = true
reth-evm.workspace = true
reth-execution-types.workspace = true
reth-trie.workspace = true
reth-chain-state.workspace = true
reth-rpc-types-compat.workspace = true
gravity-storage.workspace = true
alloy-primitives.workspace = true
tokio.workspace = true
once_cell.workspace = true

# ethereum
revm.workspace = true

# misc
tracing.workspace = true
