[package]
name = "reth-pipe-exec-layer-ext-v2"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "pipeline execution layer extension"

[lints]
workspace = true

[dependencies]
reth-primitives.workspace = true
reth-primitives-traits.workspace = true
reth-evm-ethereum.workspace = true
reth-chainspec.workspace = true
reth-revm.workspace = true
reth-evm.workspace = true
reth-execution-types.workspace = true
reth-chain-state.workspace = true
reth-ethereum-primitives.workspace = true
gravity-storage.workspace = true
alloy-primitives.workspace = true
alloy-consensus.workspace = true
alloy-eips.workspace = true
tokio.workspace = true
once_cell.workspace = true

# ethereum
revm.workspace = true

# misc
tracing.workspace = true
reth-metrics.workspace = true
metrics.workspace = true

[dev-dependencies]
rand.workspace = true
